# solana_test_coin

./: .gitignore  package-lock.json  package.json
accounts/: owner.json  reciver.json  token_account.json  token_metadata_account.json  token_mint.json
assets/: metadata.json
client/: createTokenScript.ts  example.ts  main.ts  mint.ts  swap.ts  utils.ts
client/scripts/: giveNameAndIconToToken.ts
programs/pepo_coin/: Cargo.toml
programs/pepo_coin/src/: entrypint.rs  error.rs  instruction.rs  lib.rs  processor.rs
scripts/: cicd.sh
