[package]
name = "pepo_coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.0"
num-traits = "^0.2"
solana-program = "1.16.6"
thiserror = "1.0.44"
borsh = "^0.10"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
